# bazel-xjc

./: .gitignore  BUILD.bazel  README.md
src/main/xjb/: sample.xjb
src/main/xsd/: sample.xsd
